--- a/package.json
+++ b/package.json
@@ -10,21 +10,38 @@
     "dev": "next dev -p 8080",
     "build": "tsc",
     "start": "next start",
+    "test": "jest",
     "lint": "next lint"
   },
   "dependencies": {
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
+    "@jest/globals": "^29.7.0",
+    "@swc/core": "^1.5.3",
+    "@swc/jest": "^0.2.36",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-jest": "^29.7.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "typescript": "^5",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.0.0",
     "next": "14.2.3",
     "next-compose-plugins": "^2.2.1",
-    "next-transpile-modules": "^10.0.1"
+    "next-transpile-modules": "^10.0.1",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5"
   }
 }
