--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.17",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "react": "^18",
     "react-dom": "^18",
+    "styled-components": "^6.1.10",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
