--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.10",
+    "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
