--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.17",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "autoprefixer": "^10.4.19",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.10",
